# wheat-disaster-detection-yolov8

./: CONTRIBUTING.md  README.md  pyproject.toml  test.py
docs/: README.md  api.md  configuration.md  dataset-structure.md  faq.md  quick-start.md  training.md
src/: main.py
src/config/: config.yaml
src/data/: __init__.py  wheat_disaster.yaml
src/models/: __init__.py
src/tests/: __init__.py
src/utils/: __init__.py
src/wheat_disaster_detection_yolov8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
